- Update Gruntfile to properly process images, also added clearing cache and image minification to grunt compile task. - Deferred the loading of several javascript files to the footer of Magento. - Set overrides to fire update:all custom event instead of update:selects. - Updated Blue Acorn Core to not allow console to run on IE7 & 6 just incase that's a thing. - Added Shipping Selects in the Cart to the list of smallSelects in SuperSelects - Updated when setMaxOptionsHeight is run on the SuperSelects so that pages don't seem to scroll for ever when a long select is on page load. - Added Functionality to hide or disable a super select when the parent select is hidden or disabled. - Fixed a lot of select styling when the options of the select have long text within them.

--- a/webroot/skin/frontend/blueacorn/gp/scss/blueacorn/_super-selects.scss
+++ b/webroot/skin/frontend/blueacorn/gp/scss/blueacorn/_super-selects.scss
@@ -56,6 +56,12 @@
         color: $black-80;
         display: inline-block;
         font: 300 1em/30px $f-stack-default;
+        // @include not-ie8() {
+            height: 100%;
+            float: left;
+            overflow: hidden;
+        // }
+
     }
     .ba-arrow {
         background: url('../images/blueacorn/super-selects/super-selects-sprite.png') no-repeat 0 0;
@@ -77,6 +83,10 @@
     top: 0;
     left: 0;
     width: 100%;
+    @include not-ie8() {
+        width: auto;
+        min-width: 100%;
+    }
     padding: 0 10px;
     border-radius: 5px;
     box-shadow: 0 1px 4px rgba(0, 0, 0, .25);
@@ -89,6 +99,9 @@
         list-style: none;
         margin: 0;
         width: 100%;
+        @include not-ie8() {
+            float: left;
+        }
         li {
             padding: 0;
             margin: 0;
@@ -98,6 +111,9 @@
             cursor: pointer;
             font: 300 1em/30px $f-stack-default !important;
             color: $black-80;
+            @include not-ie8() {
+                white-space: nowrap;
+            }
             &:hover {
                 color: $brand-primary;
             }
@@ -185,6 +201,9 @@
         display: block;
         float: left;
         width: auto;
+        @include not-ie8() {
+            min-width: 0;
+        }
         position: absolute;
         left: auto;
         opacity: 0;
@@ -531,6 +550,9 @@
             position: relative;
             top: 5px;
             display: none;
+            @include not-ie8() {
+                float: left;
+            }
         }
     }
     &.setup {
@@ -558,6 +580,9 @@
         ul {
             width: 100%;
             padding: 20px;
+            @include not-ie8() {
+                li { white-space: normal; }
+            }
             li span {
                 font-size: 32px;
                 line-height: 40px;
@@ -724,5 +749,12 @@ html.touch.resp-mobile, html.touch.resp-tablet {
         width: 24px;
         height: 24px;
         line-height: 27px;
+    }
+    @include not-ie8() {
+        .ba-options ul li {
+            margin: 0;
+            padding: 0;
+            font: 300 1em/24px $f-stack-default;
+        }
     }
 }
